[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets_player/bar_energy1.png" type="Texture" id=1]
[ext_resource path="res://assets_player/bar_energy3.png" type="Texture" id=2]
[ext_resource path="res://assets_player/bar_energy2.png" type="Texture" id=3]
[ext_resource path="res://scripts/player/energy_bar.gd" type="Script" id=4]

[node name="barraDeEnergia" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="EnergiaBarEscura" type="TextureProgress" parent="."]
visible = false
margin_right = 16.0
margin_bottom = 6.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 1, 0.45098, 0.45098, 1 )

[node name="EnergiaBar" type="TextureProgress" parent="."]
margin_right = 16.0
margin_bottom = 6.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
